--- a/make.template
+++ b/make.template
@@ -163,7 +163,7 @@ BENCHMARK_LLVM = $(TARGET)/$(BENCHMARK)_LLVM
 ####################
 COMMONCFLAGS = $(GMACROS) $(GFRONTEND_FLAGS)
 COMMONCLIBS = $(GFRONTEND_LIBS) 
-COMMONCINCLUDES = $(GFRONTEND_INCLUDES)
+COMMONCINCLUDES = -I$(OPENARCLIB) $(GFRONTEND_INCLUDES)
 ifeq ($(OPENARC_ARCH),0)
 # CUDA target
 OPENARCLIB_SUFFIX = cuda
@@ -191,8 +191,6 @@ endif
 endif
 
 ifeq ($(OMP),1)
-CLIBS1_BASE = $(GOMP_LIBS)
-CLIBS2_BASE = $(COMMONCLIBS) $(GOMP_LIBS)
 OMP_FLAGS1 = $(GOMP_FLAGS)
 ifneq ($(GOMP_FLAGS),"")
 OMP_FLAGS2 = $(GOMP_FLAGS)
@@ -203,8 +201,6 @@ else
 ACCRT_BASE = openaccrtomp_$(OPENARCLIB_SUFFIX)
 endif
 else
-CLIBS1_BASE = 
-CLIBS2_BASE = $(COMMONCLIBS)
 OMP_FLAGS1 =
 OMP_FLAGS2 =
 ACCRT_BASE = openaccrt_$(OPENARCLIB_SUFFIX)
@@ -223,9 +219,15 @@ ACCRTLIB = $(ACCRT_BASE)
 endif
 
 # Libraries
-CLIBS1 += $(CLIBS1_BASE) -L$(OPENARCLIB) 
+ifeq ($(OMP),1)
+CLIBS1_BASE = $(GOMP_LIBS)
+CLIBS2_BASE = -L$(OPENARCLIB) -l$(ACCRTLIB) -lomphelper $(COMMONCLIBS) $(GOMP_LIBS)
+else
+CLIBS1_BASE = 
+CLIBS2_BASE = -L$(OPENARCLIB) -l$(ACCRTLIB) -lomphelper $(COMMONCLIBS)
+endif
 CLIBS1_LLVM += -L$(OPENARCLIB) 
-CLIBS2_BASE += -l$(ACCRTLIB) -lomphelper
+CLIBS1 += $(CLIBS1_BASE) -L$(OPENARCLIB) 
 
 $(BENCHMARK)_CPU: $(CSRCS) makedirectories
 	$(PRECMD)
@@ -241,7 +243,7 @@ $(BENCHMARK)_CPU2: $(CXXSRCS) makedirectories
 $(BENCHMARK)_TCPU: $($(CETUS_OUTPUT)/$(OCXXSRCS)) $(CXXSRCS) makedirectories
 	$(COPY_CXXSRCS)
 	$(PRECMD)
-	cd $(CETUS_OUTPUT); $(CXX) $(DEFSET_CPU) $(CFLAGS2) -I ../ -o ../$(BENCHMARK_TCPU) $(OCXXSRCS) $(CXXSRCS) $(COMMONCLIBS) $(CLIBS2); if [ -f "./$(KERNEL_FILE)" ]; then  cp $(KERNEL_FILE) ../$(TARGET); fi; cd ../
+	cd $(CETUS_OUTPUT); $(CXX) $(DEFSET_CPU) $(CFLAGS2) -I ../ -o ../$(BENCHMARK_TCPU) $(OCXXSRCS) $(CXXSRCS) -L$(OPENARCLIB) $(COMMONCLIBS) $(CLIBS2); if [ -f "./$(KERNEL_FILE)" ]; then  cp $(KERNEL_FILE) ../$(TARGET); fi; cd ../
 	$(POSTCMD)
 
 $(BENCHMARK)_LLVM: $(CSRCS) makedirectories
