--- a/test/openarcConf.sample
+++ b/test/openarcConf.sample
@@ -675,6 +675,7 @@
 #        =2 for Xeon Phi with OpenCL 
 #        =3 for Altera with OpenCL 
 #        =4 for MCL with OpenCL 
+#        =5 for AMD HIP
 #If not set, the target is decided by OPENARC_ARCH env variable.
 #
 ########################################
