--- a/test/examples/openarc/matmul_openacc_cuda/Makefile
+++ b/test/examples/openarc/matmul_openacc_cuda/Makefile
@@ -11,7 +11,7 @@ OBJS_CU = matmul.o kernel.o
 OBJS_ACC = acc_helper.o
 
 COMMONCLIBS = $(GFRONTEND_LIBS)
-COMMONCINCLUDE = $(GBACKEND_INCLUDES) $(GFRONTEND_INCLUDES)
+COMMONCINCLUDE = -I$(OPENARCLIB) $(GBACKEND_INCLUDES) $(GFRONTEND_INCLUDES)
 
 ifeq ($(OMP),1)
 CLIBS = $(COMMONCLIBS) $(GOMP_LIBS)
@@ -34,7 +34,7 @@ endif
 
 
 $(BENCHMARK)_CUDA: ${OBJS_CU} ${OBJS_ACC}
-	$(BACKENDCXX) $(DEFSET) $(COMMONCINCLUDE) $(GMACROS) $(GBACKEND_FLAGS) $(CC_FLAGS) $(OMP_FLAGS) -o $(BENCHMARK)_CUDA $(OBJS_CU) $(OBJS_ACC) $(CLIBS) -l$(ACCRTLIB) -lomphelper
+	$(BACKENDCXX) $(DEFSET) $(COMMONCINCLUDE) $(GMACROS) $(GBACKEND_FLAGS) $(CC_FLAGS) $(OMP_FLAGS) -o $(BENCHMARK)_CUDA $(OBJS_CU) $(OBJS_ACC) $(CLIBS) -L$(OPENARCLIB) -l$(ACCRTLIB) -lomphelper
 
 $(OBJS_ACC): acc_helper.cpp
 	$(CXX) $(DEFSET) $(COMMONCINCLUDE) $(GMACROS) $(GFRONTEND_FLAGS) $(CC_FLAGS) $(GOMP_FLAGS) -c -o $(OBJS_ACC) acc_helper.cpp $(CLIBS)
