--- a/test/examples/openarc/matmul_openacc_cuda/Makefile
+++ b/test/examples/openarc/matmul_openacc_cuda/Makefile
@@ -34,10 +34,13 @@ endif
 
 
 $(BENCHMARK)_CUDA: ${OBJS_CU} ${OBJS_ACC}
-	$(BACKENDCXX) $(DEFSET) $(COMMONCINCLUDE) $(GMACROS) $(GBACKEND_FLAGS) $(CC_FLAGS) $(OMP_FLAGS) -o $(BENCHMARK)_CUDA $(OBJS_CU) $(OBJS_ACC) $(CLIBS) -L$(OPENARCLIB) -l$(ACCRTLIB) -lomphelper
+	mkdir -p bin
+	$(BACKENDCXX) $(DEFSET) $(COMMONCINCLUDE) $(GMACROS) $(GBACKEND_FLAGS) $(CC_FLAGS) $(OMP_FLAGS) -o ./bin/$(BENCHMARK)_CUDA $(OBJS_CU) $(OBJS_ACC) $(CLIBS) -L$(OPENARCLIB) -l$(ACCRTLIB) -lomphelper
+	cp -f openarc_kernel.* ./bin/
+	cp -f gpu.sh ./bin/
 
 $(OBJS_ACC): acc_helper.cpp
-	$(CXX) $(DEFSET) $(COMMONCINCLUDE) $(GMACROS) $(GFRONTEND_FLAGS) $(CC_FLAGS) $(GOMP_FLAGS) -c -o $(OBJS_ACC) acc_helper.cpp $(CLIBS)
+	$(CXX) $(DEFSET) $(COMMONCINCLUDE) $(GMACROS) $(GFRONTEND_FLAGS) $(CC_FLAGS) $(OMP_FLAGS) -c -o $(OBJS_ACC) acc_helper.cpp $(CLIBS)
 
 matmul.o: matmul.cu
 	$(BACKENDCXX) $(DEFSET) $(COMMONCINCLUDE) $(GMACROS) $(GBACKEND_FLAGS) $(CC_FLAGS) $(OMP_FLAGS) -c -o matmul.o matmul.cu $(CLIBS)
@@ -49,4 +52,4 @@ clean:
 	rm -f *.o *.bc *~ 
 
 purge: clean
-	rm -rf $(BENCHMARK)_CUDA openarcConf.txt *.log cetus_output openarc_kernel* acc_helper.cpp
+	rm -rf $(BENCHMARK)_CUDA openarcConf.txt *.log cetus_output openarc_kernel* acc_helper.cpp bin
