--- a/make.template
+++ b/make.template
@@ -212,14 +212,14 @@ ACCRT_BASE = openaccrt_$(OPENARCLIB_SUFFIX)
 endif
 
 # Compiler flags 
-CFLAGS1 += $(OMP_FLAGS1) -I$(OPENARCLIB)
-CFLAGS1_LLVM += $(OMP_FLAGS1) -I$(OPENARCLIB)
+CFLAGS1 += $(OMP_FLAGS1) -I$(OPENARCLIB) $(GPTHREADS_FLAGS)
+CFLAGS1_LLVM += $(OMP_FLAGS1) -I$(OPENARCLIB) $(GPTHREADS_LIBS)
 CFLAGS2 += -D_OPENACC=201306
 ifeq ($(MODE),profile)
-CFLAGS2 += $(GFRONTEND_DEBUG) $(OMP_FLAGS2) $(COMMONCINCLUDES)
+CFLAGS2 += $(GFRONTEND_DEBUG) $(OMP_FLAGS2) $(COMMONCINCLUDES) $(GPTHREADS_FLAGS)
 ACCRTLIB = $(ACCRT_BASE)pf
 else
-CFLAGS2 += $(COMMONCFLAGS) $(OMP_FLAGS2) $(COMMONCINCLUDES)
+CFLAGS2 += $(COMMONCFLAGS) $(OMP_FLAGS2) $(COMMONCINCLUDES) $(GPTHREADS_FLAGS)
 ACCRTLIB = $(ACCRT_BASE)
 endif
 
@@ -231,8 +231,8 @@ else
 CLIBS1_BASE = 
 CLIBS2_BASE = -L$(OPENARCLIB) -l$(ACCRTLIB) -lomphelper $(COMMONCLIBS)
 endif
-CLIBS1_LLVM += -L$(OPENARCLIB) 
-CLIBS1 += $(CLIBS1_BASE) -L$(OPENARCLIB) 
+CLIBS1_LLVM += -L$(OPENARCLIB) $(GPTHREADS_LIBS)
+CLIBS1 += $(CLIBS1_BASE) -L$(OPENARCLIB) $(GPTHREADS_LIBS)
 
 $(BENCHMARK)_CPU: $(CSRCS) makedirectories
 	$(PRECMD)
@@ -248,7 +248,7 @@ $(BENCHMARK)_CPU2: $(CXXSRCS) makedirectories
 $(BENCHMARK)_TCPU: $($(CETUS_OUTPUT)/$(OCXXSRCS)) $(CXXSRCS) makedirectories
 	$(COPY_CXXSRCS)
 	$(PRECMD)
-	cd $(CETUS_OUTPUT); $(CXX) $(DEFSET_CPU) $(CFLAGS2) -I ../ -o ../$(BENCHMARK_TCPU) $(OCXXSRCS) $(CXXSRCS) -L$(OPENARCLIB) $(COMMONCLIBS) $(CLIBS2); if [ -f "./$(KERNEL_FILE)" ]; then  cp $(KERNEL_FILE) ../$(TARGET); fi; cd ../
+	cd $(CETUS_OUTPUT); $(CXX) $(DEFSET_CPU) $(CFLAGS2) -I ../ -o ../$(BENCHMARK_TCPU) $(OCXXSRCS) $(CXXSRCS) -L$(OPENARCLIB) $(COMMONCLIBS) $(CLIBS2) $(GPTHREADS_LIBS); if [ -f "./$(KERNEL_FILE)" ]; then  cp $(KERNEL_FILE) ../$(TARGET); fi; cd ../
 	$(POSTCMD)
 
 $(BENCHMARK)_LLVM: $(CSRCS) makedirectories
@@ -262,7 +262,7 @@ $(BENCHMARK)_ACC: COMPILE_HOST COMPILE_KERNEL
 COMPILE_HOST: $($(CETUS_OUTPUT)/$(OCXXSRCS)) $(CXXSRCS) makedirectories
 	$(COPY_CXXSRCS)
 	$(PRECMD)
-	cd $(CETUS_OUTPUT); $(CXX) $(DEFSET_ACC) $(CFLAGS2) -I ../ -o ../$(BENCHMARK_OPENACC) $(OCXXSRCS) $(CXXSRCS) $(CLIBS2_BASE) $(CLIBS2); cp $(KERNEL_FILE) ../$(TARGET); if [ -f "$(OPENARCLIB)/binBuilder_$(OPENARCLIB_SUFFIX)" ]; then cp $(OPENARCLIB)/binBuilder_$(OPENARCLIB_SUFFIX) ../$(TARGET); fi; cp $(OPENARCLIB)/Timer ../$(TARGET); cd ../
+	cd $(CETUS_OUTPUT); $(CXX) $(DEFSET_ACC) $(CFLAGS2) -I ../ -o ../$(BENCHMARK_OPENACC) $(OCXXSRCS) $(CXXSRCS) $(CLIBS2_BASE) $(CLIBS2) $(GPTHREADS_LIBS); cp $(KERNEL_FILE) ../$(TARGET); if [ -f "$(OPENARCLIB)/binBuilder_$(OPENARCLIB_SUFFIX)" ]; then cp $(OPENARCLIB)/binBuilder_$(OPENARCLIB_SUFFIX) ../$(TARGET); fi; cp $(OPENARCLIB)/Timer ../$(TARGET); cd ../
 	cd $(CETUS_OUTPUT); grep resilience $(KERNEL_FILE) > /dev/null && cp $(OPENARCLIB)/$(RESILIENCE_FILE) $(OPENARCLIB)/resilience.h ../$(TARGET); cd ../
 
 COMPILE_KERNEL: $($(CETUS_OUTPUT)/$(KERNLE_FILE)) makedirectories
